fixed header spacing, working on nav menu.  Button done and moving onto media breaks.  Itel, I know I shouldn't comment on what is complete but I don't think my git is pushing consistently.  I'll screenshot my work as I go

--- a/css/index.css
+++ b/css/index.css
@@ -169,14 +169,18 @@ p {
   margin: auto;
 }
 .container .intro nav #banner h1 {
-  font-size: 4rem;
+  display: flex;
   justify-content: center;
+  align-self: center;
+  font-size: 4rem;
   padding: 2px;
 }
 .container .intro nav #banner a {
   justify-content: center;
   justify-content: space-around;
   font-size: 1.8rem;
+  color: #22283A;
+  padding: 20px;
 }
 footer {
   color: #22283B;
