--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,8 +9,8 @@
 }
 
 .container .intro nav #banner h1 {
+    .centerflex(); 
     font-size: 4rem; 
-    justify-content: center;
     padding: 2px; 
 }
 
@@ -18,4 +18,6 @@
         justify-content: center;
         justify-content: space-around;
         font-size: 1.8rem;
+        color: #22283A; 
+        padding: 20px; 
 }
